# Ai-Enhancements

./: LICENSE  LICENSE.md  Modelfile  README.md  pyproject.toml  requirements.txt  setup_venv.sh
.github/workflows/: python-tests.yml
configs/: default.yaml
docs/: OLLAMA_GUIDE.md
docs/Nexus-Resonance-Codex-tex-files/: Ai-Enhancements.tex
examples/: demo_all_enhancements.py  integration_huggingface.py  integration_openfold.py
huggingface/: MODEL_CARD.md  push_to_hub.py
src/: __init__.py
src/enhancements/: __init__.py  e8_golden_basis.py  entropy_stopping.py  exclusion_gradient_router.py  floor_sinh_activation.py  giza_attention_bias.py  giza_isomorphism.py  golden_flow_norm.py  golden_spiral_rope.py  gtt_entropy_regulariser.py  hodge_torsion_attention.py  lucas_pell_decay.py  lucas_sparse_mask.py  modular_dropout.py  mst_lyapunov_clipping.py  navier_stokes_damping.py  nrc_protein_engine.py  phi_lora_adapter.py  phi_momentum_accelerator.py  phi_resonant_weighting.py  phi_void_positional.py  pisano_lr_schedule.py  prime_density_generation.py  qrt_convolution.py  qrt_optimizer.py  shard_folding.py  shard_unfolder.py  triple_theta_init.py  tupt_sync_seed.py  tupt_token_pruning.py
src/nrc_ai/: __init__.py  e8_golden_basis.py  entropy_stopping.py  exclusion_gradient_router.py  floor_sinh_activation.py  giza_attention_bias.py  giza_isomorphism.py  golden_flow_norm.py  golden_spiral_rope.py  gtt_entropy_regulariser.py  hodge_torsion_attention.py  lucas_pell_decay.py  lucas_sparse_mask.py  modular_dropout.py  mst_lyapunov_clipping.py  navier_stokes_damping.py  nrc_protein_engine.py  phi_lora_adapter.py  phi_momentum_accelerator.py  phi_resonant_weighting.py  phi_void_positional.py  pisano_lr_schedule.py  prime_density_generation.py  qrt_convolution.py  qrt_optimizer.py  resonance_kv_cache.py  shard_folding.py  shard_unfolder.py  triple_theta_init.py  tupt_sync_seed.py  tupt_token_pruning.py
src/nrc_math/: __init__.py  qrt.py
tests/: test_e8_basis.py  test_entropy_stopping.py  test_exclusion_router.py  test_floor_sinh.py  test_giza_bias.py  test_giza_isomorphism.py  test_golden_flow_norm.py  test_golden_rope.py  test_gtt_entropy.py  test_hodge_torsion.py  test_lucas_mask.py  test_lucas_pell.py  test_modular_dropout.py  test_mst_lyapunov.py  test_navier_stokes.py  test_nrc_protein.py  test_phi_lora.py  test_phi_momentum.py  test_phi_void.py  test_phi_weighting.py  test_pisano_lr.py  test_prime_generation.py  test_qrt_convolution.py  test_qrt_optimizer.py  test_resonance_kv.py  test_shard_folding.py  test_shard_unfolder.py  test_sync_seed.py  test_triple_theta.py  test_tupt_pruning.py
(+4 files in other folders)
